[tool.poetry]
name = "plugin_manager"
version = "1.0.0"
description = ""
authors = ["LEv145"]


[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
hikari-lightbulb = "^2.2.0"
hikari = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

